@@ -6,6 +6,7 @@
 #20 Allow configuration of available commands in main()
 #21 Move contribution API into static methods on BQCoreModule
 #22 Better Module override API
+#24 Allow creation of DefaultBootLogger with non-System stdin/out
 
 0.11:
 
